--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-asgiref==3.4.1
+asgiref==3.5.0
 defusedxml==0.7.1
 diff-match-patch==20200713
-Django==3.2.6
-django-import-export==2.5.0
+Django==4.0.3
+django-import-export==2.8.0
 et-xmlfile==1.1.0
 MarkupPy==1.14
 odfpy==1.4.1
-openpyxl==3.0.7
-psycopg2==2.9.1
-pytz==2021.1
-PyYAML==5.4.1
-sqlparse==0.4.1
-tablib==3.0.0
+openpyxl==3.0.9
+psycopg2==2.9.3
+PyYAML==6.0
+sqlparse==0.4.2
+tablib==3.2.0
+tzdata==2022.1
 xlrd==2.0.1
 xlwt==1.3.0
