--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.5.0
 defusedxml==0.7.1
 diff-match-patch==20200713
+dj-database-url==0.5.0
 Django==4.0.3
+django-heroku==0.3.1
 django-import-export==2.8.0
 et-xmlfile==1.1.0
+gunicorn==20.1.0
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.0.9
@@ -12,5 +15,6 @@ PyYAML==6.0
 sqlparse==0.4.2
 tablib==3.2.0
 tzdata==2022.1
+whitenoise==6.0.0
 xlrd==2.0.1
 xlwt==1.3.0
